--- a/AboutForm.resx
+++ b/AboutForm.resx
@@ -57,4 +57,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="label1.Text" xml:space="preserve">
+    <value>“ Our mission is to provide customers with high-quality, made-to-order
+burgers using only the freshest ingredients, served in a warm and
+welcoming atmosphere by a team dedicated to exceptional customer
+service."
+
+</value>
+  </data>
 </root>
